adding tie hand evaluations methods

--- a/PokerV2/PokerV2.csproj
+++ b/PokerV2/PokerV2.csproj
@@ -286,6 +286,7 @@
     <None Include="Resources\king_of_spades2.png" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="Resources\Poker Hands Tie Evaluations" />
     <None Include="Resources\queen_of_clubs.png" />
   </ItemGroup>
   <ItemGroup>
